# practical_parallelism_in_cpp

./: .gitignore  CMakeLists.txt  README.md
intro/: CMakeLists.txt  call_from.cpp  intro.sln  lock_basics.cpp  modern_lock.cpp
intro/intro/: call_from.cpp  intro.vcxproj  intro.vcxproj.filters
intro/intro/My Amplifier Results - intro/: My Amplifier Results - intro.amplxeproj
intro/intro/My Amplifier Results - intro/r000ue/: r000ue.amplxe
intro/intro/My Amplifier Results - intro/r000ue/config/: analysis_type.cfg  collection.cfg  context_values.cfg  log.cfg  runsa.options  state.cfg
intro/intro/My Amplifier Results - intro/r000ue/data.0/: sep3b24.20190319T185438.794423.tb7  systemcollector-6720-DESKTOP-NG640K6.sc
intro/intro/My Amplifier Results - intro/r000ue/sqlite-db/: dicer.db
intro/intro/My Inspector Results - intro/: My Inspector Results - intro.inspxeproj
intro/intro/My Inspector Results - intro/r000ti3/: r000ti3.inspxe
intro/intro/My Inspector Results - intro/r000ti3/config/: analysis_type.cfg  (+7 more)
parallel_algorithms/gaussian_elimination/mpi/: CMakeLists.txt
parallel_algorithms/gaussian_elimination/mpi/cyclic_striped_mapping/: gaussian.cpp  ge_mpi_cyclic_striped_mapping.cpp
parallel_algorithms/gaussian_elimination/mpi/naive/: gaussian.cpp  ge_mpi_naive  ge_mpi_naive.cpp
parallel_algorithms/gaussian_elimination/pthreads/: CMakeLists.txt  ge_pthreads.cpp  utils.h
parallel_algorithms/gaussian_elimination/pthreads/cyclic_striped_mapping/: gaussian.cpp  ge_pthreads_cyclic_mapping.cpp  utils.h
parallel_algorithms/gaussian_elimination/pthreads/naive/: gaussian.cpp  ge_pthreads_naive.cpp  utils.h
(+44 files in other folders)
